@@ -27,6 +27,8 @@ Version 1.8.1
        in the list view. (Stefan)
 - BUG: Issue #499: Subclassing static control
        can fail. (Stefan)
+- BUG: Issue #502: repo browser shows context
+       menu for SVNParentPath item. (Stefan)
 
 Version 1.8.0
 See the release notes here:
